crates/sui-core/src/unit_tests/snapshots/sui_core__authority__authority_tests__clever_abort_with_code_execution_error_source.snap
---
source: crates/sui-core/src/unit_tests/authority_tests.rs
expression: execution_error_source.unwrap()
---
VMError with status ABORTED with sub status 5 at location Module ModuleId { address: 0000000000000000000000000000000000000000000000000000000000000000, name: Identifier("aborts") } and message 0000000000000000000000000000000000000000000000000000000000000000::aborts::abort_with_code at offset 1 at code offset 1 in function definition 1
